Agrega búsqueda de empresas clientes

--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -61,7 +61,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{{ path_for('measurements') }}">
+                        <a href="{{ path_for('clientes/empresas') }}">
                             <span class="glyphicon glyphicon-home"></span>
                             Ver Clientes Empresas
                         </a>
