--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -45,7 +45,27 @@
             </li>
             <li class="{% if uri_path == path_for('categories') %}active{% endif %}"><a href="{{ path_for('categories') }}">Categorías</a></li>
             <li class="{% if uri_path == path_for('providers') %}active{% endif %}"><a href="{{ path_for('providers') }}">Proveedores</a></li>
-            <li class="{% if uri_path == path_for('invoices') %}active{% endif %}"><a href="{{ path_for('invoices') }}">Facturas</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <span class="glyphicon glyphicon-list-alt"></span>
+                    Facturas
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a href="{{ path_for('invoices') }}">
+                            <span class="glyphicon glyphicon-user"></span>
+                            Ver Consumidor Final
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path_for('creditofiscal') }}">
+                            <span class="glyphicon glyphicon-home"></span>
+                            Ver Crédito Fiscal
+                        </a>
+                    </li>
+                </ul>
+            </li>
             <li class="{% if uri_path == path_for('warehouses') %}active{% endif %}"><a href="{{ path_for('warehouses') }}">Bodegas</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
