--- a/app/Views/unitsofmeasurement/measurements.html
+++ b/app/Views/unitsofmeasurement/measurements.html
@@ -51,11 +51,8 @@
                                 <td>{{ unit.UnidadMedida }}</td>
                             </tr>
                             {% else %}
-                            <tr>
-                                <td class="text-center" colspan="2">No se encontraron resultados</td>
-                            </tr>
+                            <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endfor %}
-
                         </table>
                     </div>
                 </div>
