--- a/app/Views/categories.html
+++ b/app/Views/categories.html
@@ -6,7 +6,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-0 col-lg-3">
-                <div class="panel panel-default">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h2 class="panel-title">Búsqueda de Categorías</h2>
                     </div>
@@ -32,7 +32,7 @@
                                 </select>
                             </div>
                             <input type="hidden" name="currentPage" value="{{ pagination.currentPage }}">
-                            <button class="btn btn-primary link-submit" type="submit" data-input="currentPage" data-value="1">
+                            <button class="btn btn-block btn-info link-submit" type="submit" data-input="currentPage" data-value="1">
                                 <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
                             </button>
                         </form>
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-0 col-lg-9">
-                <div class="panel no-margin-bottom {% if categories %}panel-success{% else %}panel-default{% endif %}">
+                <div class="panel no-margin-bottom {% if categories %}panel-primary{% else %}panel-default{% endif %}">
                     <div class="panel-heading">
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
@@ -56,9 +56,7 @@
                                 <td>{{ category.Nombre }}</td>
                             </tr>
                             {% else %}
-                            <tr>
-                                <td class="text-center" colspan="2">No se encontraron resultados</td>
-                            </tr>
+                            <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endfor %}
                         </table>
                     </div>
