--- a/app/Views/templates/navbar.html
+++ b/app/Views/templates/navbar.html
@@ -24,9 +24,21 @@
                         </a>
                     </li>
                     <li>
+                        <a href="{{ path_for('categories/createform') }}">
+                            <span class="glyphicon glyphicon-plus-sign"></span>
+                            Nueva Categoría
+                        </a>
+                    </li>
+                    <li>
                         <a href="{{ path_for('products') }}">
                             <span class="glyphicon glyphicon-gift"></span>
                             Ver Productos
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path_for('categories') }}">
+                            <span class="glyphicon glyphicon-tasks"></span>
+                            Ver Categorías
                         </a>
                     </li>
                     <li>
@@ -43,7 +55,6 @@
                     </li>
                 </ul>
             </li>
-            <li class="{% if uri_path == path_for('categories') %}active{% endif %}"><a href="{{ path_for('categories') }}">Categorías</a></li>
             <li class="{% if uri_path == path_for('providers') %}active{% endif %}"><a href="{{ path_for('providers') }}">Proveedores</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
