Arregla titulo malo de la página de marcas

--- a/app/Views/brands.html
+++ b/app/Views/brands.html
@@ -1,6 +1,6 @@
 {% extends 'templates/base.html' %}
 
-{% block title %}Proveedores{% endblock %}
+{% block title %}Marcas{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
