--- a/app/Views/products/newproduct.html
+++ b/app/Views/products/newproduct.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-6 col-sm-offset-3">
+            <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
                 {% if productSaved is same as(true) %}
                 <div class="alert alert-success"><span class="glyphicon glyphicon-ok-sign"></span> El producto ha sido creado exitosamente!</div>
                 {% endif %}
@@ -16,63 +16,69 @@
                     <div class="panel-heading">Introduce un nuevo producto</div>
                     <div class="panel-body">
                         <form action="{{ path_for('products') }}" method="post">
-                            <div class="form-group">
-                                <label for="categoriaProducto">Categoría del Producto</label>
-                                <select class="form-control new-product-category-select" name="categoriaProducto" id="categoriaProducto">
-                                    <option value="">Elige Una Categoría</option>
-                                    {% for category in categories %}
-                                        <option value="{{ category.CategoriaProductoID }}" {% if input.categoriaProducto == category.CategoriaProductoID and productSaved is same as(false) %}selected{% endif %}>{{ category.Nombre }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="codigoProducto">Código</label>
-                                <div class="input-group">
-                                    <span class="input-group-addon new-product-cat-preview">--</span>
-                                    <input type="text" name="codigoProducto" value="{% if productSaved is same as(false) %}{{ input.codigoProducto }}{% endif %}" class="form-control" id="codigoProducto" maxlength="50">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="categoriaProducto">Categoría del Producto</label>
+                                        <select class="form-control new-product-category-select" name="categoriaProducto" id="categoriaProducto">
+                                            <option value="">Elige Una Categoría</option>
+                                            {% for category in categories %}
+                                            <option value="{{ category.CategoriaProductoID }}" {% if input.categoriaProducto == category.CategoriaProductoID and productSaved is same as(false) %}selected{% endif %}>{{ category.Nombre }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="codigoProducto">Código</label>
+                                        <div class="input-group">
+                                            <span class="input-group-addon new-product-cat-preview">--</span>
+                                            <input type="text" name="codigoProducto" value="{% if productSaved is same as(false) %}{{ input.codigoProducto }}{% endif %}" class="form-control" id="codigoProducto" maxlength="50">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="descripcionProducto">Descripción</label>
+                                        <input type="text" name="descripcionProducto" value="{% if productSaved is same as(false) %}{{ input.descripcionProducto }}{% endif %}" class="form-control" id="descripcionProducto" maxlength="255">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="stockMinProducto">Stock Mínimo</label>
+                                        <input type="number" name="stockMinProducto" value="{% if productSaved is same as(false) %}{{ input.stockMinProducto ?? 0 }}{% else %}0{% endif %}" class="form-control" id="stockMinProducto" min="0">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="descripcionProducto">Descripción</label>
-                                <input type="text" name="descripcionProducto" value="{% if productSaved is same as(false) %}{{ input.descripcionProducto }}{% endif %}" class="form-control" id="descripcionProducto" maxlength="255">
-                            </div>
-                            <div class="form-group">
-                                <label for="stockMinProducto">Stock Mínimo</label>
-                                <input type="number" name="stockMinProducto" value="{% if productSaved is same as(false) %}{{ input.stockMinProducto ?? 0 }}{% else %}0{% endif %}" class="form-control" id="stockMinProducto" min="0">
-                            </div>
-                            <div class="form-group">
-                                <label for="marcaProducto">Marca</label>
-                                <input type="text" name="marcaProducto" value="{% if productSaved is same as(false) %}{{ input.marcaProducto }}{% endif %}" class="form-control" id="marcaProducto" maxlength="100" list="listaMarcas">
-                                <datalist id="listaMarcas">
-                                    {% for brand in brands %}
-                                        <option>{{ brand.Nombre }}</option>
-                                    {% endfor %}
-                                </datalist>
-                            </div>
-                            <div class="form-group">
-                                <label for="medidaProducto">Unidad de Medida</label>
-                                <input type="text" name="medidaProducto" value="{% if productSaved is same as(false) %}{{ input.medidaProducto }}{% endif %}" class="form-control" id="medidaProducto" maxlength="100" list="listaMedidas">
-                                <datalist id="listaMedidas">
-                                    {% for unit in measurements %}
-                                        <option>{{ unit.UnidadMedida }}</option>
-                                    {% endfor %}
-                                </datalist>
-                            </div>
-                            <div class="form-group">
-                                <label for="categoriaDetProducto">Categoría DET</label>
-                                <select class="form-control" name="categoriaDetProducto" id="categoriaDetProducto">
-                                    {% for detcat in detcategories %}
-                                        <option value="{{ detcat.CodigoBienDet }}" {% if input.categoriaDetProducto == detcat.CodigoBienDet and productSaved is same as(false) %}selected{% endif %}>{{ detcat.Descripcion }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label for="referenciaLibroDetProducto">Referencia Libro DET</label>
-                                <select class="form-control" name="referenciaLibroDetProducto" id="referenciaLibroDetProducto">
-                                    {% for reference in detreferences %}
-                                        <option value="{{ reference.CodigoLibroDet }}" {% if input.referenciaLibroDetProducto == reference.CodigoLibroDet and productSaved is same as(false) %}selected{% endif %}>{{ reference.Descripcion }}</option>
-                                    {% endfor %}
-                                </select>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="marcaProducto">Marca</label>
+                                        <input type="text" name="marcaProducto" value="{% if productSaved is same as(false) %}{{ input.marcaProducto }}{% endif %}" class="form-control" id="marcaProducto" maxlength="100" list="listaMarcas">
+                                        <datalist id="listaMarcas">
+                                            {% for brand in brands %}
+                                            <option>{{ brand.Nombre }}</option>
+                                            {% endfor %}
+                                        </datalist>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="medidaProducto">Unidad de Medida</label>
+                                        <input type="text" name="medidaProducto" value="{% if productSaved is same as(false) %}{{ input.medidaProducto }}{% endif %}" class="form-control" id="medidaProducto" maxlength="100" list="listaMedidas">
+                                        <datalist id="listaMedidas">
+                                            {% for unit in measurements %}
+                                            <option>{{ unit.UnidadMedida }}</option>
+                                            {% endfor %}
+                                        </datalist>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="categoriaDetProducto">Categoría DET</label>
+                                        <select class="form-control" name="categoriaDetProducto" id="categoriaDetProducto">
+                                            {% for detcat in detcategories %}
+                                            <option value="{{ detcat.CodigoBienDet }}" {% if input.categoriaDetProducto == detcat.CodigoBienDet and productSaved is same as(false) %}selected{% endif %}>{{ detcat.Descripcion }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="referenciaLibroDetProducto">Referencia Libro DET</label>
+                                        <select class="form-control" name="referenciaLibroDetProducto" id="referenciaLibroDetProducto">
+                                            {% for reference in detreferences %}
+                                            <option value="{{ reference.CodigoLibroDet }}" {% if input.referenciaLibroDetProducto == reference.CodigoLibroDet and productSaved is same as(false) %}selected{% endif %}>{{ reference.Descripcion }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
                             <div class="checkbox">
                                 <label>
