--- a/app/Views/categories/newcategory.html
+++ b/app/Views/categories/newcategory.html
@@ -16,13 +16,15 @@
                 <div class="panel-heading">Introduce una nueva categoría</div>
                 <div class="panel-body">
                     <form action="{{ path_for('categories') }}" method="post">
-                        <div class="form-group">
+                        <div class="form-group has-feedback has-clear">
                             <label for="codigoCategoria">Código</label>
                             <input type="text" name="codigoCategoria" value="{% if categorySaved is same as(false) %}{{ input.codigoCategoria }}{% endif %}" class="form-control" id="codigoCategoria" maxlength="2">
+                            <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoCategoria %}hidden{% endif %}"></span>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group has-feedback has-clear">
                             <label for="nombreCategoria">Nombre</label>
                             <input type="text" name="nombreCategoria" value="{% if categorySaved is same as(false) %}{{ input.nombreCategoria }}{% endif %}" class="form-control" id="nombreCategoria" maxlength="30">
+                            <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreCategoria %}hidden{% endif %}"></span>
                         </div>
                         <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-plus-sign"></span> Crear Categoría</button>
                     </form>
