Refactor bootstrap-clearinput.css a form-clearinput.css

--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -11,8 +11,8 @@
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-clearinput.css">
 
+    <link rel="stylesheet" href="/css/form-clearinput.css">
     <link rel="stylesheet" href="/css/utility.css">
 
     <!-- HTML5 shim y Respond.js para soporte IE8 de elementos HTML5 y media queries -->
@@ -29,7 +29,7 @@
 <body>
     {% include 'templates/navbar.html' %}
     {% block content %}{% endblock %}
-    
+
     <script src="/js/form-clearinput.js" defer></script>
     <script src="/js/link-submit-form.js" defer></script>
 </body>
