--- a/app/Views/templates/base.html
+++ b/app/Views/templates/base.html
@@ -32,5 +32,6 @@
 
     <script src="/js/form-clearinput.js" defer></script>
     <script src="/js/link-submit-form.js" defer></script>
+    <script src="/js/anchorize.js" defer></script>
 </body>
 </html>
