Arregla typo en el formulario de modificar categorías

--- a/app/Views/categories/modifycategory.html
+++ b/app/Views/categories/modifycategory.html
@@ -10,7 +10,7 @@
             <div class="alert alert-success"><span class="glyphicon glyphicon-ok-sign"></span> La categoría ha sido modificada exitosamente!</div>
             {% endif %}
             {% if categorySaved is same as(false) %}
-            <div class="alert alert-danger"><span class="glyphicon glyphicon-remove-sign"></span> No se pudo modificar la categoría nueva.</div>
+            <div class="alert alert-danger"><span class="glyphicon glyphicon-remove-sign"></span> No se pudo modificar la categoría.</div>
             {% endif %}
             <div class="panel panel-primary">
                 <div class="panel-heading">Modifica esta categoría</div>
