--- a/app/Views/brands/brands.html
+++ b/app/Views/brands/brands.html
@@ -40,17 +40,21 @@
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-striped">
-                            <tr>
-                                <th>ID</th>
-                                <th>Nombre</th>
-                            </tr>
-                            {% for brand in brands %}
-                            <tr>
-                                <td>{{ brand.MarcaID }}</td>
-                                <td>{{ brand.Nombre }}</td>
-                            </tr>
-                            {% else %}
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Nombre</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for brand in brands %}
+                                <tr class="anchorize" data-href="{{ path_for('brands') }}/id/{{ brand.MarcaID }}">
+                                    <td>{{ brand.MarcaID }}</td>
+                                    <td>{{ brand.Nombre }}</td>
+                                </tr>
+                                {% else %}
+                            </tbody>
                             <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endfor %}
                         </table>
