--- a/app/Views/unitsofmeasurement/measurements.html
+++ b/app/Views/unitsofmeasurement/measurements.html
@@ -40,17 +40,21 @@
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-striped">
-                            <tr>
-                                <th>ID</th>
-                                <th>Nombre</th>
-                            </tr>
-                            {% for unit in measurements %}
-                            <tr>
-                                <td>{{ unit.MedidaID }}</td>
-                                <td>{{ unit.UnidadMedida }}</td>
-                            </tr>
-                            {% else %}
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Nombre</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for unit in measurements %}
+                                <tr class="anchorize" data-href="{{ path_for('measurements') }}/id/{{ unit.MedidaID }}">
+                                    <td>{{ unit.MedidaID }}</td>
+                                    <td>{{ unit.UnidadMedida }}</td>
+                                </tr>
+                                {% else %}
+                            </tbody>
                             <caption class="bottom-captions text-center">No se encontraron resultados</caption>
                             {% endfor %}
                         </table>
