Añade modificación de tirajes de factura

--- a/app/Views/tirajes/nuevotiraje.html
+++ b/app/Views/tirajes/nuevotiraje.html
@@ -1,6 +1,6 @@
 {% extends 'templates/base.html' %}
 
-{% block title  %}Nueva Tiraje{% endblock %}
+{% block title  %}Nuevo Tiraje{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
