Cambia vista de productos para calcular precio de venta con IVA

--- a/app/Views/products/products.html
+++ b/app/Views/products/products.html
@@ -83,7 +83,7 @@
                                     <td>{{ product.NombreMarca }}</td>
                                     <td>{{ product.Descripcion }}</td>
                                     <td>{{ product.Cantidad }} {{ product.UnidadMedida }}</td>
-                                    <td>$ {{ ((product.CostoActual + product.Utilidad) * 1.13)|number_format(2) }}</td>
+                                    <td>$ {{ ((product.CostoActual + product.Utilidad) * (1 + porcentajeIVA / 100))|number_format(2) }}</td>
                                 </tr>
                             {% else %}
                             </tbody>
